[tool.poetry]
name = "auto_buying_bot"
version = "0.1.0"
description = ""
authors = ["Jacob-Short <thatmanjshort@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^3.141.0"
chromedriver-binary = "^93.0.4577"
beautifulsoup4 = "^4.9.3"
pandas = "^1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
